<resources>
    <string name="app_name">CoinFolio</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="EnterCoin">Enter Coin</string>
    <string name="EnterCoinAmount">Enter Coin Amount</string>
    <string name="EnterDollarAmount">Enter Dollar Amount</string>
    <string name="Search">Search</string>
    <string name="HomePage">Home Page</string>
    <string name="PickCoin">Pick The Coin</string>
    <string name="Amount">Amount: </string>
    <string name="Investment">Investment: </string>
    <string name="FeesOptional">Fees (optional): </string>
    <string name="AddCoinToPortfolio">Add Coin To Portfolio</string>
    <string name="RemoveCoinsHere">Remove Coins Here</string>
    <string name="CoinImage">Coin Image</string>
    <string name="Day">Day</string>
    <string name="Week">Week</string>
    <string name="Month">Month</string>
    <string name="Year">Year</string>
    <string name="SignOut">Sign Out</string>
    <string name="MyPortfolio">My Portfolio</string>
    <string name="title_activity_adding_coins_complete">AddingCoinsComplete</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_coin_market_data_chart">coin_market_data_chart</string>
</resources>
